# vitis_common

./: CHANGELOG.rst  CMakeLists.txt  package.xml
include/common/: ros_opencl_120.hpp  utilities.hpp
include/core/: xf_magnitude.hpp  xf_math.h  xf_mean_stddev.hpp  xf_min_max_loc.hpp  xf_phase.hpp
include/features/: xf_harris.hpp
include/imgproc/: xf_3dlut.hpp  xf_accumulate_image.hpp  xf_accumulate_squared.hpp  xf_accumulate_weighted.hpp  xf_aec.hpp  xf_autowhitebalance.hpp  xf_bfmatcher.hpp  xf_bgr2hsv.hpp  xf_bilateral_filter.hpp  xf_black_level.hpp  xf_boundingbox.hpp  xf_box_filter.hpp  xf_bpc.hpp  xf_canny.hpp  xf_canny_sobel.hpp  xf_cca_custom.hpp  xf_channel_combine.hpp  xf_channel_extract.hpp  xf_clahe.hpp  xf_colorcorrectionmatrix.hpp  xf_colorthresholding.hpp  xf_convertscaleabs.hpp  xf_corner_img_to_list.hpp  xf_corner_update.hpp  xf_crop.hpp  xf_custom_convolution.hpp  xf_cvt_color.hpp  xf_cvt_color_utils.hpp  xf_delay.hpp  xf_demosaicing.hpp  xf_dilation.hpp  xf_distancetransform.hpp  xf_duplicateimage.hpp  xf_edge_tracing.hpp  xf_erosion.hpp  xf_extra_utility.h  xf_extract_eframes.hpp  xf_flip.hpp  xf_gaincontrol.hpp  xf_gammacorrection.hpp  (+39 more)
src/: utilities.cpp  xcl2.cpp
